[package]
name = "memory-pager"
version = "0.6.2-alpha.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/datrs/memory-pager"
documentation = "https://docs.rs/memory-pager"
description = "Access memory using small fixed size buffers"
authors = ["datrs <yoshuawuyts@gmail.com>"]
readme = "README.md"

[dependencies]

[dev-dependencies]
quickcheck = "0.6.2"
# clippy = "0.0.189"
