[package]
name = "memory-pager"
version = "0.8.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/datrs/memory-pager"
documentation = "https://docs.rs/memory-pager"
description = "Access memory using small fixed size buffers"
authors = ["datrs <yoshuawuyts@gmail.com>"]
readme = "README.md"

[dependencies]
failure = "0.1.1"

[dev-dependencies]
quickcheck = "0.7.1"
rand = "0.6.0"
# clippy = "0.0.189"
