[package]
name = "memory-pager"
version = "0.9.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/datrs/memory-pager"
documentation = "https://docs.rs/memory-pager"
description = "Access memory using small fixed size buffers"
authors = ["datrs <yoshuawuyts@gmail.com>"]
readme = "README.md"
edition = "2018"

[dependencies]

[dev-dependencies]
quickcheck = "0.8.5"
rand = "0.6.5"
